flatpak: Ensure we are caching the right icons

When we choose to cache the remote icons, make sure we do it and that we
do it properly.

BUG: 490786